[workspace]
members = [
    "crates/assent",
    "crates/client-logic",
    "crates/host-logic",
    "crates/blob-stream",
    "crates/participant",
    "crates/steps",
    "crates/seer",
    "crates/rectify",
    "crates/protocol",
    "crates/ordered-datagram",
    "crates/sample-step",
    "crates/nimble",
    "crates/step-types",
    "crates/sample-game-type",
    "crates/layer",
    "crates/protocol-header",
    "crates/client",
    "crates/host",
    "crates/step",
    "crates/wrapped-step",
]
resolver = "2"
