[workspace]
members = [
    "crates/assent",
    "crates/client-logic",
    "crates/host-logic",
    "crates/blob-stream",
    "crates/participant",
    "crates/seer",
    "crates/rectify",
    "crates/protocol",
    "crates/ordered-datagram",
    "crates/sample-step",
    "crates/nimble",
    "crates/step-map",
    "crates/sample-game",
    "crates/layer",
    "crates/client",
    "crates/host",
    "crates/step",
    "crates/wrapped-step",
    "crates/nimble-ffi",
]
resolver = "2"

# DO NOT LIKE THAT THIS IS NEEDED AT THE ROOT LEVEL
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"          # Optimize for size
panic = "abort"          # Reduce binary size by avoiding unwinding
debug = false
strip = "debuginfo"
