[package]
name = "nimble-assent"
version = "0.0.14-dev"
edition = "2021"
license = "MIT"
description = "Authoritative state"
repository = "https://github.com/nimble-rust/assent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimble-steps = { path = "../steps", version = "0.0.14-dev" }
tick-id = "0.0.9"
log = "0.4.22"

[dev-dependencies]
test-log = "0.2.16"
