[package]
name = "nimble-assent"
version = "0.0.15-dev"
edition = "2021"
license = "MIT"
description = "Authoritative state"
repository = "https://github.com/nimble-rust"
categories = ["game-development"]
keywords = ["game", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tick-queue = "0.0.2"
tick-id = "0.0.9"
log = "0.4.22"

[dev-dependencies]
test-log = "0.2.16"
