[package]
name = "nimble-blob-stream"
version = "0.0.16"
edition = "2021"
license = "MIT"
description = "Nimble Blob transfer over datagrams"
repository = "https://github.com/nimble-rust/nimble"
categories = ["game-development"]
keywords = ["game", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-array-rs = "0.0.3"
flood-rs = "0.0.12"
log = "0.4.22"
err-rs = "0.0.4"
monotonic-time-rs = "0.0.5"

[dev-dependencies]
rand = "0.8.5"
test-log = "0.2.16"
