[package]
name = "nimble-client-connecting"
version = "0.0.12-dev"
edition = "2021"
license = "MIT"
description = "Nimble Connecting Logic"
repository = "https://github.com/nimble-rust/nimble"

[dependencies]
nimble-protocol = { path = "../protocol", version = "0.0.12-dev" }
log = "^0.4.22"
app-version = { path = "../app-version", version = "0.0.1" }

[dev-dependencies]
test-log = "^0.2.16"
