[package]
name = "nimble-client-logic"
version = "0.0.12-dev"
edition = "2021"
license = "MIT"
description = "Nimble Client Logic"
repository = "https://github.com/nimble-rust/client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tick-id = "0.0.7"
flood-rs = "0.0.11"
log = "0.4.22"
nimble-steps = { path = "../steps", version = "0.0.12-dev" }
nimble-protocol = { path = "../protocol", version = "0.0.12-dev" }
nimble-blob-stream = { path = "../blob-stream", version = "0.0.12-dev" }
err-rs = "0.0.4"
nimble-step-types = { path = "../step-types", version = "0.0.12-dev" }
metricator = "0.0.2"
nimble-participant = { path = "../participant", version = "0.0.12-dev" }
app-version = "0.0.2"
url = "2.5.2"

[dev-dependencies]
test-log = "0.2.16"
nimble-sample-step = { path = "../sample-step", version = "0.0.12-dev" }
criterion = "0.5.1"
seq-map = "0.0.1"

[[bench]]
name = "bench_logic"
harness = false