[package]
name = "nimble-client-logic"
version = "0.0.15-dev"
edition = "2021"
license = "MIT"
description = "Nimble Client Logic"
repository = "https://github.com/nimble-rust/nimble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tick-id = "0.0.9"
flood-rs = "0.0.12"
log = "0.4.22"
err-rs = "0.0.4"
metricator = "0.0.6"
app-version = "0.0.2"
tick-queue = "0.0.2"

nimble-step = { path = "../step", version = "0.0.15-dev" }
nimble-participant = { path = "../participant", version = "0.0.15-dev" }
nimble-step-map = { path = "../step-map", version = "0.0.15-dev" }
nimble-blob-stream = { path = "../blob-stream", version = "0.0.15-dev" }
nimble-protocol = { path = "../protocol", version = "0.0.15-dev" }
monotonic-time-rs = "0.0.5"

[dev-dependencies]
test-log = "0.2.16"
nimble-sample-step = { path = "../sample-step", version = "0.0.15-dev" }
