[package]
name = "nimble-client-stream"
version = "0.0.12-dev"
edition = "2021"
license = "MIT"
description = "Nimble Client"
repository = "https://github.com/nimble-rust/client"

[dependencies]
log = "0.4.22"
flood-rs = "0.0.12"
nimble-client-logic = { path = "../client-logic", version = "0.0.12-dev" }
nimble-protocol = { path = "../protocol", version = "0.0.12-dev" }
nimble-step-types = { path = "../step-types", version = "0.0.12-dev" }
datagram-builder = "0.0.3"
hexify = "0.0.3"
err-rs = "0.0.4"
tick-id = "0.0.7"
nimble-steps = { path = "../steps", version = "0.0.12-dev" }
seq-map = "0.0.2"
datagram-chunker = { path = "../datagram-chunker", version = "0.0.1" }
app-version = "0.0.2"
nimble-step = { path = "../step", version = "0.0.12-dev" }


[dev-dependencies]
nimble-sample-step = { path = "../sample-step", version = "0.0.12-dev" }
nimble-steps = { path = "../steps", version = "0.0.12-dev" }
test-log = "0.2.16"
tick-id = "0.0.7"
rand = "0.8.5"
nimble-participant = { path = "../participant", version = "0.0.12-dev" }