[package]
name = "nimble-client"
version = "0.0.14-dev"
edition = "2021"

[dependencies]
nimble-protocol = { path = "../protocol", version = "0.0.14-dev" }
nimble-layer = { path = "../layer", version = "0.0.14-dev" }
nimble-client-logic = { path = "../client-logic", version = "0.0.14-dev" }
network-metrics = "0.0.1"
nimble-assent = { path = "../assent", version = "0.0.14-dev" }
nimble-seer = { path = "../seer", version = "0.0.14-dev" }
nimble-rectify = { path = "../rectify", version = "0.0.14-dev" }
nimble-step-types = { path = "../step-types", version = "0.0.14-dev" }
nimble-steps = { path = "../steps", version = "0.0.14-dev" }
nimble-step = { path = "../step", version = "0.0.14-dev" }
datagram-chunker = "0.0.1"
flood-rs = "0.0.12"
log = "0.4.22"
monotonic-time-rs = "0.0.5"
metricator = "0.0.6"
app-version = "0.0.2"
tick-id = "0.0.9"
err-rs = "0.0.4"
seq-map = "0.0.2"
nimble-participant = { path = "../participant", version = "0.0.14-dev" }
time-tick = "0.0.1"

[dev-dependencies]
test-log = "0.2.16"
nimble-sample-step = { path = "../sample-step", version = "0.0.14-dev" }
nimble-sample-game = { path = "../sample-game-type", version = "0.0.14-dev" }
nimble-host = { path = "../host", version = "0.0.14-dev" }
nimble-host-logic = { path = "../host-logic", version = "0.0.14-dev" }
tick-id = "0.0.9"
hazy-transport = "0.0.4"
rand = "0.8.5"
seq-map = "0.0.2"
nimble-participant = { path = "../participant", version = "0.0.14-dev" }
