[package]
name = "freelist"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Free list for u8 values"
repository = "https://github.com/nimble-rust/nimble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
test-log = "0.2.16"
