[package]
name = "hexify"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Format hex"
repository = "https://github.com/nimble-rust/nimble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"

[features]
default = []
log_equal = []
