[package]
name = "nimble-host-front"
version = "0.0.12-dev"
edition = "2021"

[dependencies]
nimble-ordered-datagram = { path = "../ordered-datagram", version = "0.0.12-dev" }
nimble-protocol-header = { path = "../protocol-header", version = "0.0.12-dev" }
nimble-host-stream = { path = "../host-stream", version = "0.0.12-dev" }
nimble-host-logic = { path = "../host-logic", version = "0.0.12-dev" }
flood-rs = "^0.0.11"
tick-id = "^0.0.7"
monotonic-time-rs = "^0.0.3"
test-log = "^0.2.16"
app-version = { path = "../app-version", version = "0.0.1" }

[dev-dependencies]
test-log = "^0.2.16"
nimble-sample-step = { path = "../sample-step", version = "0.0.12-dev" }
hexify = "^0.0.3"
nimble-participant = { path = "../participant", version = "0.0.12-dev" }