[package]
name = "nimble-host-front"
version = "0.0.12-dev"
edition = "2021"

[dependencies]
nimble-ordered-datagram = { path = "../ordered-datagram", version = "0.0.12-dev" }
nimble-protocol-header = { path = "../protocol-header", version = "0.0.12-dev" }
nimble-host-stream = { path = "../host-stream", version = "0.0.12-dev" }
nimble-host-logic = { path = "../host-logic", version = "0.0.12-dev" }
flood-rs = "0.0.12"
tick-id = "0.0.7"
monotonic-time-rs = "0.0.3"
test-log = "0.2.16"
app-version = "0.0.2"
log = "0.4.22"
hexify = "0.0.3"
err-rs = "0.0.4"

[dev-dependencies]
test-log = "0.2.16"
nimble-sample-step = { path = "../sample-step", version = "0.0.12-dev" }
nimble-participant = { path = "../participant", version = "0.0.12-dev" }