[package]
name = "nimble-host-logic"
version = "0.0.12-dev"
edition = "2021"
license = "MIT"
description = "Nimble network host"
repository = "https://github.com/nimble-rust/host"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimble-steps = { path = "../steps", version = "0.0.12-dev" }
nimble-participant = { path = "../participant", version = "0.0.12-dev" }
nimble-blob-stream = { path = "../blob-stream", version = "0.0.12-dev" }
tick-id = "0.0.7"
nimble-protocol = { path = "../protocol", version = "0.0.12-dev" }
freelist-rs = "0.0.4"
log = "0.4.22"
flood-rs = "0.0.11"
monotonic-time-rs = "0.0.3"
nimble-step-types = { path = "../step-types", version = "0.0.12-dev" }
seq-map = "0.0.1"
app-version = "0.0.2"

[dev-dependencies]
test-log = "0.2.16"
nimble-sample-step = { path = "../sample-step", version = "0.0.12-dev" }
