[package]
name = "nimble-host-logic"
version = "0.0.16"
edition = "2021"
license = "MIT"
description = "Nimble Host"
repository = "https://github.com/nimble-rust/nimble"
categories = ["game-development"]
keywords = ["game", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tick-queue = "0.0.2"
tick-id = "0.0.9"
freelist-rs = "0.0.4"
log = "0.4.22"
flood-rs = "0.0.12"
monotonic-time-rs = "0.0.5"
seq-map = "0.0.2"
app-version = "0.0.2"
err-rs = "0.0.4"

nimble-step = { path = "../step", version = "0.0.16" }
nimble-participant = { path = "../participant", version = "0.0.16" }
nimble-step-map = { path = "../step-map", version = "0.0.16" }

nimble-blob-stream = { path = "../blob-stream", version = "0.0.16" }
nimble-protocol = { path = "../protocol", version = "0.0.16" }

[dev-dependencies]
test-log = "0.2.16"
nimble-sample-step = { path = "../sample-step", version = "0.0.16" }
