[package]
name = "nimble-host"
version = "0.0.14-dev"
edition = "2021"
license = "MIT"
description = "Nimble Host"
repository = "https://github.com/nimble-rust/nimble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flood-rs = "0.0.12"
tick-id = "0.0.9"
monotonic-time-rs = "0.0.5"
app-version = "0.0.2"
log = "0.4.22"
hexify = "0.0.3"
err-rs = "0.0.4"

datagram-chunker = "0.0.2"

nimble-layer = { path = "../layer", version = "0.0.14-dev" }
nimble-protocol = { path = "../protocol", version = "0.0.14-dev" }
nimble-host-logic = { path = "../host-logic", version = "0.0.14-dev" }

[dev-dependencies]
test-log = "0.2.16"
nimble-sample-step = { path = "../sample-step", version = "0.0.14-dev" }
nimble-participant = { path = "../participant", version = "0.0.14-dev" }
