[package]
name = "nimble-layer"
version = "0.0.16"
edition = "2021"
license = "MIT"
description = "Nimble Layer"
repository = "https://github.com/nimble-rust/nimble"
categories = ["game-development"]
keywords = ["game", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flood-rs = "0.0.12"
log = "0.4.22"
metricator = "0.0.6"
app-version = "0.0.2"
tick-id = "0.0.9"
hexify = { version = "0.0.3", features = ["log_equal"] }

nimble-ordered-datagram = { path = "../ordered-datagram", version = "0.0.16" }


[dev-dependencies]
test-log = "0.2.16"
nimble-sample-step = { path = "../sample-step", version = "0.0.16" }
nimble-client-logic = { path = "../client-logic", version = "0.0.16" }
datagram-chunker = "0.0.2"
monotonic-time-rs = "0.0.5"
