[package]
name = "nimble-ffi"
version = "0.0.16"
edition = "2021"
license = "MIT"
description = "Nimble FFI"
repository = "https://github.com/nimble-rust/nimble"
categories = ["game-development"]
keywords = ["game", "network", "ffi"]

[dependencies]
nimble-client = { path = "../client", version = "0.0.16" }
nimble-wrapped-step = { path = "../wrapped-step", version = "0.0.16" }
monotonic-time-rs = "0.0.5"
flood-rs = "0.0.12"
app-version = "0.0.2"
nimble-step = { path = "../step", version = "0.0.16" }
nimble-step-map = { path = "../step-map", version = "0.0.16" }
once_cell = "1.13.0"

[build-dependencies]
cbindgen = "0.27.0"

[lib]
name = "nimble"
crate-type = ["dylib", "staticlib"]
