[package]
name = "nimble-ffi"
version = "0.0.17-dev"
edition = "2021"
license = "MIT"
description = "Nimble FFI"
repository = "https://github.com/nimble-rust/nimble"
categories = ["game-development"]
keywords = ["game", "network", "ffi"]

[dependencies]
nimble-client = { path = "../client", version = "0.0.17-dev" }
nimble-wrapped-step = { path = "../wrapped-step", version = "0.0.17-dev" }
monotonic-time-rs = "0.0.5"
flood-rs = "0.0.12"
app-version = "0.0.2"
nimble-step = { path = "../step", version = "0.0.17-dev" }
nimble-step-map = { path = "../step-map", version = "0.0.17-dev" }
once_cell = "1.13.0"

[lib]
name = "nimble_lib"
crate-type = ["dylib", "staticlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"          # Optimize for size
panic = "abort"          # Reduce binary size by avoiding unwinding
debug = false
strip = "debuginfo"