[package]
name = "nimble-rust"
version = "0.0.13-dev"
edition = "2021"
license = "MIT"
description = "Nimble"
repository = "https://github.com/nimble-rust/nimble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimble-client-front = { path = "../client-front", version = "0.0.12-dev" }
nimble-client-stream = { path = "../client-stream", version = "0.0.12-dev" }
nimble-host = { path = "../host", version = "0.0.12-dev" }
nimble-assent = { path = "../assent", version = "0.0.12-dev" }
nimble-seer = { path = "../seer", version = "0.0.12-dev" }
nimble-rectify = { path = "../rectify", version = "0.0.12-dev" }
flood-rs = "^0.0.11"
nimble-steps = { path = "../steps", version = "0.0.12-dev" }
tick-id = "^0.0.7"
nimble-protocol = { path = "../protocol", version = "0.0.12-dev" }
nimble-client-logic = { path = "../client-logic", version = "0.0.12-dev" }
log = "^0.4.22"
nimble-step-types = { path = "../step-types", version = "0.0.12-dev" }
nimble-sample-game = { path = "../sample-game-type", version = "0.0.12-dev" }

[dev-dependencies]
test-log = "^0.2.16"

[package.metadata.cargo-machete]
ignored = ["nimble_client"]
[package.metadata.cargo-shear]
ignored = ["nimble-client"]
