[package]
name = "nimble-rust"
version = "0.0.14-dev"
edition = "2021"
license = "MIT"
description = "Nimble"
repository = "https://github.com/nimble-rust/nimble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flood-rs = "0.0.12"
tick-id = "0.0.9"
monotonic-time-rs = "0.0.5"

nimble-client = { path = "../client", version = "0.0.14-dev" }
nimble-host = { path = "../host", version = "0.0.14-dev" }

nimble-step = { path = "../step", version = "0.0.14-dev" }
nimble-step-map = { path = "../step-map", version = "0.0.14-dev" }

nimble-sample-game = { path = "../sample-game-type", version = "0.0.14-dev" }
nimble-sample-step = { path = "../sample-step", version = "0.0.14-dev" }

nimble-wrapped-step = { path = "../wrapped-step", version = "0.0.14-dev" }

# nimble-layer = { path = "../layer", version = "0.0.14-dev" }
# nimble-host-logic = { path = "../host-logic", version = "0.0.14-dev" }
# nimble-assent = { path = "../assent", version = "0.0.14-dev" }
# nimble-seer = { path = "../seer", version = "0.0.14-dev" }
# nimble-rectify = { path = "../rectify", version = "0.0.14-dev" }
# tick-queue = "0.0.2"
# nimble-client-logic = { path = "../client-logic", version = "0.0.14-dev" }

[dev-dependencies]
test-log = "0.2.16"
log = "0.4.22"
app-version = "0.0.2"

[package.metadata.cargo-machete]
ignored = ["nimble_client"]
[package.metadata.cargo-shear]
ignored = ["nimble-client"]
