[package]
name = "ordered-datagram"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Ordered Datagram"
repository = "https://github.com/nimble-rust/nimble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flood-rs = "^0.0.10"

[dev-dependencies]
test-log = "^0.2.16"
