[package]
name = "nimble-ordered-datagram"
version = "0.0.17-dev"
edition = "2021"
license = "MIT"
description = "Nimble Ordered Datagram"
repository = "https://github.com/nimble-rust/nimble"
categories = ["game-development"]
keywords = ["game", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flood-rs = "0.0.12"

[dev-dependencies]
test-log = "0.2.16"
