[package]
name = "nimble-participant-steps"
version = "0.0.12-dev"
edition = "2021"
license = "MIT"
description = "Nimble Participant Steps"
repository = "https://github.com/nimble-rust/participant-steps"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimble-steps = { path = "../steps", version = "0.0.12-dev" }
nimble-participant = { path = "../participant", version = "0.0.12-dev" }
flood-rs = "0.0.11"
