[package]
name = "nimble-protocol-header"
version = "0.0.14-dev"
edition = "2021"
license = "MIT"
description = "Nimble Protocol Header"
repository = "https://github.com/nimble-rust/nimble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flood-rs = "0.0.12"
