[package]
name = "nimble-protocol"
version = "0.0.10-dev"
edition = "2021"
license = "MIT"
description = "Nimble Protocol"
repository = "https://github.com/nimble-rust/protocol"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flood-rs = "^0.0.10"
blob-stream = "0.0.3"
nimble-participant = { path = "../participant", version = "0.0.10-dev" }
tick-id = "^0.0.7"
log = "^0.4.22"
nimble-step-types = { path = "../nimble-step-types", version = "0.0.10-dev" }

[dev-dependencies]
nimble-sample-step = { path = "../sample-step", version = "0.0.10-dev" }
test-log = "^0.2.16"
