[package]
name = "nimble-rectify"
version = "0.0.15-dev"
edition = "2021"
license = "MIT"
description = "Integration between assent and seer"
repository = "https://github.com/nimble-rust/nimble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tick-queue = "0.0.2"
err-rs = "0.0.4"
log = "0.4.22"
flood-rs = "0.0.12"
tick-id = "0.0.9"

nimble-participant = { path = "../participant", version = "0.0.15-dev" }

nimble-assent = { path = "../assent", version = "0.0.15-dev" }
nimble-seer = { path = "../seer", version = "0.0.15-dev" }


[dev-dependencies]
test-log = "0.2.16"
nimble-step-map = { path = "../step-map", version = "0.0.15-dev" }
nimble-step = { path = "../step", version = "0.0.15-dev" }
