[package]
name = "nimble-sample-game"
version = "0.0.12-dev"
edition = "2021"
license = "MIT"
description = "Nimble Sample Game Types"
repository = "https://github.com/nimble-rust/nimble"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimble-assent = { path = "../assent", version = "0.0.12-dev" }
nimble-seer = { path = "../seer", version = "0.0.12-dev" }
nimble-rectify = { path = "../rectify", version = "0.0.12-dev" }
flood-rs = "0.0.11"
log = "0.4.22"
nimble-step-types = { path = "../step-types", version = "0.0.12-dev" }
nimble-sample-step = { path = "../sample-step", version = "0.0.12-dev" }
app-version = "0.0.2"
nimble-step = { path = "../step", version = "0.0.12-dev" }
