[package]
name = "nimble-sample-game"
version = "0.0.16"
edition = "2021"
license = "MIT"
description = "Nimble Sample Game Types"
repository = "https://github.com/nimble-rust/nimble"
categories = ["game-development"]
keywords = ["game", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flood-rs = "0.0.12"
log = "0.4.22"
app-version = "0.0.2"

nimble-step = { path = "../step", version = "0.0.16" }

nimble-step-map = { path = "../step-map", version = "0.0.16" }
nimble-sample-step = { path = "../sample-step", version = "0.0.16" }

nimble-assent = { path = "../assent", version = "0.0.16" }
nimble-seer = { path = "../seer", version = "0.0.16" }
nimble-rectify = { path = "../rectify", version = "0.0.16" }
